--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "xgboost"]
 	path = thirdparty/xgboost
-	url = https://github.com/dmlc/xgboost.git
+	url = https://github.com/ROCm/xgboost.git
