Giving up for the night

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,4 +53,4 @@ build.tool-args = ["-j6"]
 [tool.scikit-build.cmake.define]
 USE_HIP = "ON"
 CMAKE_HIP_ARCHITECTURES="gfx1010"
-USE_RCCL= "ON"
+USE_RCCL = "OFF"
