--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,4 @@ build-dir = "build/{wheel_tag}"
 build.tool-args = ["-j6"]
 
 [tool.scikit-build.cmake.define]
-USE_HIP = "ON"
-CMAKE_HIP_ARCHITECTURES="gfx1010"
-USE_RCCL = "OFF"
+PLUGIN_SYCL = "OFF"
