Got xgboost to compile with SYCL support using Intel's compiler, but opencl does not recognize my GPU :(

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,4 +51,4 @@ build-dir = "build/{wheel_tag}"
 build.tool-args = ["-j6"]
 
 [tool.scikit-build.cmake.define]
-PLUGIN_SYCL = "OFF"
+PLUGIN_SYCL = "ON"
