Getting reasonable prices for american put call and implementing quantile regression!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "cmake >= 4.1.0",
   "ninja >= 1.13.0",
   "numpy >= 2.3.2",
+  "scikit-learn >= 1.7.1",
 ]
 requires-python = ">=3.11"
 authors = [
@@ -51,4 +52,4 @@ build-dir = "build/{wheel_tag}"
 build.tool-args = ["-j6"]
 
 [tool.scikit-build.cmake.define]
-PLUGIN_SYCL = "ON"
+PLUGIN_SYCL = "OFF"
