--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
   "ninja >= 1.13.0",
   "numpy >= 2.3.2",
   "scikit-learn >= 1.7.1",
+  "matplotlib >= 3.10.6",
 ]
 requires-python = ">=3.11"
 authors = [
